# benching

./: CODEOWNERS  README.md  config.yaml  docker-compose.yaml  redis-stack.conf  sonar-project.properties
api-bridge/: Dockerfile  README.md  pyproject.toml
api-bridge/src/: __main__.py
api-bridge/src/configs/: configs_model.py
api-bridge/src/middleware/: auth_middleware.py
api-bridge/src/routers/: bridge.py
api-bridge/src/utils/: apis.py  jwt_validator.py  secret_manager.py  snowflake_driver.py
api-bridge/test/: test_api_bridge.py
benchmarking/normalization_module/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
benchmarking/normalization_module/configs/: norm_default_config.yaml
benchmarking/normalization_module/src/common/: data_io.py  llm_service.py  logging_config.py  pg_db_utils.py  snowflake_utils.py
benchmarking/normalization_module/src/normalization/: benchmarking.py  clustering.py  normalizer.py  preprocessors.py
benchmarking/normalization_module/src/prompts/: normalization_prompts.py
bootstrap/: Dockerfile  README.md  init.sh  pyproject.toml
bootstrap/src/: __main__.py  env.py
bootstrap/src/pipelines/deploy/: force_deploy.py
bootstrap/src/providers/cache_store/: redis_cache.py
bootstrap/src/source_ai/519f6dbf-da97-47ba-9f4f-298e832e34bb/: query_stabilisation.txt  sql_generation.txt
bootstrap/tests/: aggreagted_response_plot.py  locustfile.py  plot_locust_results.py  questions.yaml
chat-service/: Dockerfile  README.md  pyproject.toml
chat-service/src/: __main__.py  env.py
chat-service/src/celery_tasks/: celery_app.py  celeryconfig.py  contract_summary_task.py  doc_ai_task.py  pg_status_task.py  redis_task.py  tasks.py
chat-service/src/configs/: configs_model.py
chat-service/src/datamodels/: doc_ai_model.py  openai_response_model.py  request_model.py  state_model.py
chat-service/src/middleware/: auth_middleware.py
chat-service/src/models/: datamodels.py
chat-service/src/pipelines/: orchestrator.py
chat-service/src/pipelines/docs_ai/: entity_pipeline.py  update_contract_summary.py  updation_pipeline.py
chat-service/src/pipelines/generation/: charts.py  chat.py  question_recommendation.py
chat-service/src/pipelines/threads/: chat_thread.py
chat-service/src/providers/: prompts.py
chat-service/src/providers/database/: postgres_driver.py  postgres_driver_v2.py  snowflake_driver.py
chat-service/src/providers/document_store/: qdrant_store.py
chat-service/src/providers/engine/: wren_engine.py
chat-service/src/providers/llm/: openai.py
chat-service/src/routers/: chat_service.py  docai_service.py  thread_service.py
chat-service/src/source_ai/048ee4ca-43b3-48e5-b95a-bd442ba15c91/: intent_classification.txt  kf_summary.txt  kf_summary_old.txt  kf_summary_old_v2.txt  kf_summary_v1.txt  ner_tagging.txt  open_world.txt  open_world_old_v2.txt  open_world_summary.txt  query_stablisation.txt  question_recommendation.txt
chat-service/src/source_ai/519f6dbf-da97-47ba-9f4f-298e832e34bb/: intent_classification.txt  kf_summary.txt  open_world.txt  query_statlisation.txt  question_recommendation.txt
chat-service/src/source_ai/6566983b-2977-4deb-9bb4-2d3ba7b7ac8c/: intent_classification.txt  kf_summary_old_v2.txt  open_world.txt  open_world_old.txt  (+2 more)
chat-service/src/utils/: apis.py  auth_token.py  custom_callbacks.py  jwt_validator.py  link_extraction.py  search.py
hub_ai/: Dockerfile  app.py  pyproject.toml
hub_ai/benchmarking/: amazon_crawler.py  benchmarking_job.py  benchmarking_job_llm.py  config.py  data_extractor.py  pg_db_utils.py  quick_scrape.py  web_scrapper.py
hub_ai/benchmarking/common/: s3_utils.py  snowflake_utils.py  utils.py
hub_ai/benchmarking/normalise/: env.py
hub_ai/normalization/: Dockerfile  app.py  docker-compose.yml  pyproject.toml
hub_ai/normalization/normalise/: env.py
text2sql/: Dockerfile  pyproject.toml
text2sql/src/: __main__.py  env.py
text2sql/src/celery_tasks/: celery_app.py  celeryconfig.py  tasks.py
text2sql/src/datamodels/: openai_response_model.py  request_model.py  state_model.py
text2sql/src/middleware/: auth_middleware.py
text2sql/src/pipelines/: orchestrator.py
text2sql/src/routers/: text2sql_service.py
text2sql/src/utils/: custom_callbacks.py  engine.py  jwt_validator.py  logs.py
unified-ml-endpoint/: .dockerignore  Dockerfile  app.py  docker-compose.yaml  entrypoint.sh  pyproject.toml  storage_config_dev.yml
unified-ml-endpoint-v2/: Dockerfile  app.py  docker-compose.yaml  entrypoint.sh  pyproject.toml
unified-ml-endpoint-v2/conf/common/: containers.yml  pg_credentials_local.yml  preprocessing-params.yml  realtime-params.yml  use-cases.yml
unified-ml-endpoint-v2/conf/dev/: kf_chatbot.yaml  pg_credentials.yml
unified-ml-endpoint-v2/conf/prod-eu/: pg_credentials.yml
unified-ml-endpoint-v2/conf/prod-us/: azml_deployment.yaml  kf_chatbot.yaml
unified-ml-endpoint-v2/conf/prod-us-old/: azml_deployment.yaml
unified-ml-endpoint-v2/conf/staging/: azml_deployment.yaml  models.yml
unified-ml-endpoint-v2/database/db/: Dockerfile
unified-ml-endpoint-v2/src/middleware/: auth.py  authentication.py
unified-ml-endpoint/conf/common/: secrets.yml  use-cases.yml
unified-ml-endpoint/conf/dev/: azml_deployment.yaml
unified-ml-endpoint/conf/prod-eu/: azml_deployment.yaml  kf_chatbot.yaml  models.yml
unified-ml-endpoint/conf/prod-us/: models.yml  test_config.yml
unified-ml-endpoint/conf/prod-us-old/: kf_chatbot.yaml  pg_credentials.yml
unified-ml-endpoint/conf/staging/: kf_chatbot.yaml  pg_credentials.yml
unified-ml-endpoint/src/ada_local/: endpoint_wrapper.py  preprocessing_wrapper.py
unified-ml-endpoint/src/auth/: jwt_validator.py
unified-ml-endpoint/src/middleware/: authentication.py
unified-ml-endpoint/src/migrations/: README  constants.py  db_migrate.py  migrate_pipeline_conf.json  pipeline_db_migrate.yml  schema_user_creator.py  trigger_db_migration_component.py
unified-ml-endpoint/src/scripts/: secret_validations.py
unified-ml-endpoint/src/tests/: conftest.py
(+1181 files in other folders)
