[project]
name = "api-bridge"
version = "0.1.0"
description = ""
authors = [
    {name = "parth30777052",email = "parth_pandey@external.mckinsey.com"}
]
readme = "README.md"
requires-python = ">=3.9"




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.dependencies]
annotated-types = "0.7.0"
anyio = "4.8.0"
appnope = "0.1.4"
asttokens = "3.0.0"
bcrypt = "4.2.1"
build = "1.2.2.post1"
cachecontrol = "0.14.2"
certifi = "2024.12.14"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
click = "8.1.8"
comm = "0.2.2"
curlify = "2.2.1"
debugpy = "1.8.12"
decorator = "5.1.1"
distlib = "0.3.9"
dulwich = "0.22.7"
ecdsa = "0.19.0"
exceptiongroup = "1.2.2"
executing = "2.2.0"
fastapi = "0.115.6"
fastjsonschema = "2.21.1"
filelock = "3.17.0"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.28.1"
idna = "3.10"
importlib-metadata = "8.6.1"
installer = "0.7.0"
ipykernel = "6.29.5"
ipython = "8.18.1"
jaraco-classes = "3.4.0"
jaraco-context = "6.0.1"
jaraco-functools = "4.1.0"
jedi = "0.19.2"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
keyring = "25.6.0"
matplotlib-inline = "0.1.7"
more-itertools = "10.6.0"
msgpack = "1.1.0"
nest-asyncio = "1.6.0"
packaging = "24.2"
pandas = "2.2.3"
parso = "0.8.4"
passlib = "1.7.4"
pexpect = "4.9.0"
pickleshare = "0.7.5"
pkginfo = "1.12.0"
platformdirs = "4.3.6"
prompt-toolkit = "3.0.50"
psutil = "6.1.1"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pyasn1 = "0.6.1"
pycparser = "2.22"
pydantic = "2.10.6"
pydantic-core = "2.27.2"
pygments = "2.19.1"
pyproject-hooks = "1.2.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-jose = "3.3.0"
python-multipart = "0.0.20"
pytz = "2024.2"
pyzmq = "26.2.0"
rapidfuzz = "3.11.0"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rsa = "4.2"
setuptools = "75.1.0"
shellingham = "1.5.4"
six = "1.17.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.37"
stack-data = "0.6.3"
starlette = "0.41.3"
tomlkit = "0.13.2"
tornado = "6.4.2"
traitlets = "5.14.3"
trove-classifiers = "2025.1.15.22"
typing-extensions = "4.12.2"
tzdata = "2025.1"
urllib3 = ">=1.26.16,<3.0.0"
uvicorn = "0.34.0"
virtualenv = "20.29.1"
wcwidth = "0.2.13"
wheel = "0.44.0"
xattr = "1.1.4"
zipp = "3.21.0"
crashtest = {version = "0.4.1", python = "3.9"}
numpy = {version = "2.2.2", python = "3.10"}
poetry-core = {version = "2.0.1", python = "3.10"}
poetry = {version = "2.0.1", python = "3.10"}
cleo = {version = "2.1.0", python = "3.9"}
uvloop = "^0.21.0"
httptools = "^0.6.4"
loguru = {version = "^0.7.3", python = "3.12"}
snowflake-connector-python = "3.13.2"
snowflake-sqlalchemy = "1.7.3"
boto3 = "^1.36.23"
