[project]
name = "bootstrap"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.12.13,<4.0.0)",
    "backoff (>=2.2.1,<3.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "qdrant-client (>=1.14.3,<2.0.0)",
    "locust (>=2.37.11,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "fastapi (>=0.116.0,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "redis (>=6.2.0,<7.0.0)",
    "boto3 (>=1.39.4,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "langchain-community (>=0.3.27,<0.4.0) ; python_version >= \"3.12\" and python_version < \"4.0\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
