[project]
name = "chat-service"
version = "0.1.0"
description = ""
authors = [
    {name = "parthSN394",email = "parth_pandey@external.mckinsey.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "langgraph (>=0.4.5,<0.5.0)",
    "langchain (>=0.3.25,<0.4.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "langchain-core (>=0.3.60,<0.4.0)",
    "celery (>=5.5.2,<6.0.0)",
    "snowflake-connector-python (>=3.15.0,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "pydantic (>=2.11.4,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "langchain-openai (>=0.3.17,<0.4.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "duckduckgo-search (>=8.0.2,<9.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "qdrant-client (>=1.14.2,<2.0.0)",
    "openai (>=1.81.0,<2.0.0)",
    "grandalf (>=0.8,<0.9)",
    "lightrag-hku (>=1.3.8)",
    "aiohttp (>=3.12.9,<4.0.0)",
    "sqlglot (>=26.25.3,<27.0.0)",
    "asgiref (>=3.8.1,<4.0.0)",
    "eventlet (>=0.40.0,<0.41.0)",
    "gevent (>=25.5.1,<26.0.0)",
    "uvloop (>=0.21.0,<0.22.0)",
    "httptools (>=0.6.4,<0.7.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg-pool (>=3.2.6,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
