[project]
name = "text2sql"
version = "0.1.0"
description = ""
authors = [
    {name = "parthSN394",email = "parth_pandey@external.mckinsey.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "langchain (>=0.3.25,<0.4.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "langchain-openai (>=0.3.21,<0.4.0)",
    "loguru (>=0.7.3,<0.8.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "pyjwt (>=2.10.1,<3.0.0)",
    "asgiref (>=3.8.1,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "aiohttp (>=3.12.12,<4.0.0)",
    "sqlglot (>=26.26.0,<27.0.0)",
    "qdrant-client (>=1.14.2,<2.0.0)",
    "snowflake-connector-python (>=3.15.0,<4.0.0)",
    "grandalf (>=0.8,<0.9)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
