[project]
name = "unified-ml-endpoint"
version = "0.1.0"
description = ""
authors = [
    {name = "aviban882",email = "avish_bansal@external.mckinsey.com"}
]
readme = "README.md"
requires-python = "3.10.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pgvector (>=0.4.0,<0.5.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "snowflake (>=1.3.0,<2.0.0)",
    "openai (>=1.72.0,<2.0.0)",
    "retrying (>=1.3.4,<2.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "langgraph (>=0.3.28,<0.4.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "duckduckgo-search (>=8.0.0,<9.0.0)",
    "spacy (>=3.8.5,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numerize (>=0.12,<0.13)",
    "langchain-core (>=0.3.51,<0.4.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
