[tool.poetry]
name = "normalization-module"
version = "2.1.0"
description = "An asynchronous FastAPI service for data normalization from S3 to Snowflake using GenAI."
authors = ["Prateek K. Tiwari <Prateek_Kumar_Tiwari@external.mckinsey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.34.3"
pydantic = "^2.7.4"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
openpyxl = "^3.1.4"
tqdm = "^4.66.4"
openai = "^1.35.3"
omegaconf = "^2.3.0"
boto3 = "^1.34.127"
snowflake-connector-python = {extras = ["pandas"], version = "^3.10.0"}
scikit-learn = "^1.5.2"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"